# college-study-data

./: .env.example  .gitignore  README.md  deployment.md  page_templates.md  pyproject.toml  roi_calculator.md  site_architecture.md
.github/workflows/: data-refresh-reminder.yml
data-mapping-tool-design 2/: README.md
data-mapping-tool-design 2/project/: College Templates.html  Crime Trends Wireframes.html  EPA Templates.html  Favicon Preview.html  Page Templates.html  Pollution Analyst Brand.html  Pollution Favicon Preview.html  college-shared.jsx  college.css  ds-tokens.css  epa-shared.jsx  epa.css  page-archive.jsx  page-city.jsx  page-college-home.jsx  page-college-institution.jsx  page-college-program.jsx  page-college-rollup.jsx  page-college-state.jsx  page-epa-correlations.jsx  page-epa-region.jsx  page-epa-tract.jsx  page-home.jsx  page-month.jsx  page-nbhd.jsx  page-yearreview.jsx  site-archive.css  site-shared.jsx  site.css  wf-city.jsx  wf-nbhd.jsx  wf-primitives.jsx  wireframes.css
data-mapping-tool-design 2/project/uploads/: crime_trend_mvp.md  crime_trend_plan.md
data/published/: home.json  methodology.json  rankings.json  roi_constants.json
data/published/sitemap/: ak.json  al.json  ar.json  az.json  ca.json  co.json  ct.json  dc.json  de.json  fl.json  ga.json  hi.json  ia.json  (+39 more)
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/scripts/: prebuild.mjs  predev.mjs
logs/: national_build_summary.md
pipeline/src/: backfill_roi.py  main.py  models.py  regenerate_flags.py
(+211727 files in other folders)
